--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Discovery</string>
     <string name="action_settings">Settings</string>
+    <string name="action_clear_preferences">Clear Preferences</string>
+    <string name="action_clear_bonded_devices">Clear Devices</string>
     <string name="do_device_discovery">Discover devices</string>
     <string name="cancel_device_discovery">Cancel discovery</string>
     <string name="enable_bluetooth">Enable Bluetooth</string>
@@ -9,4 +11,5 @@
     <string name="discovery_activity_discovering_message">Discovering...</string>
     <string name="title_activity_device_interaction">Controls</string>
     <string name="title_activity_interaction_settings">InteractionSettingsActivity</string>
+
 </resources>
